--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,5 +1,11 @@
 .cards {
     max-width: 880px;
-    margin: 0 auto;
-    padding: 0;
+    max-height: max-content;
+    margin: 54px auto 0;
+}
+
+@media screen and (max-width: 700px) {
+    .cards {
+        margin-top: 0;
+    }
 }
