--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,4 +1,6 @@
 .body {
     background-color: #000000;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
+    max-width: 1280px;
+    min-width: 320px;
 }
