--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,19 +1,15 @@
-.profile__spec {
+.footer__copyright {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 0em;
     text-align: left;
-    color: #FFFFFF;
-    margin: 0;
-    padding: 0;
+    color: #545454;
 }
 
 @media screen and (max-width: 700px) {
-    .profile__spec {
-        margin-top: 14px;
-        text-align: center;
+    .footer__copyright {
         font-size: 14px;
         line-height: 17px;
     }
