--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,3 +6,10 @@
     max-width: 880px;
     border-bottom: 1px solid #545454;
 }
+
+@media screen and (max-width: 900px) {
+    .header {
+        margin: 28px 0 0;
+        padding-bottom: 31px;
+    }
+}
