--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -6,4 +6,16 @@
     width: 150px;
     height: 50px;
     cursor: pointer;
+    margin-top: 11px;
+}
+
+@media screen and (max-width: 700px) {
+    .profile__add {
+        width: 282px;
+        margin-top: 31px;
+    }
+    .profile__add_img {
+        max-width: 16px;
+        max-height: 16px;
+    }
 }
