--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,20 +1,32 @@
-.profile__edit {
-    width: 24px;
-    height: 24px;
-    background-color: black;
-    border: 1px solid #FFFFFF;
-    position: relative;
-    z-index: 1;
-    align-items: center;
-    padding-top: 20px;
-    cursor: pointer;
-}
-
-.profile__edit_img {
-    position: absolute;
-    z-index: 2;
-    max-height: 10px;
-    max-width: 10px;
-    top: 7px;
-    left: 7px;
-}
+    .profile__edit {
+        width: 24px;
+        height: 24px;
+        background-color: black;
+        border: 1px solid #FFFFFF;
+        position: relative;
+        z-index: 1;
+        align-items: center;
+        padding-top: 20px;
+        cursor: pointer;
+    }
+    
+    .profile__edit_img {
+        position: absolute;
+        z-index: 2;
+        max-height: 10px;
+        max-width: 10px;
+        top: 7px;
+        left: 7px;
+    }
+    
+    @media screen and (max-width: 700px) {
+        .profile__edit {
+            margin-left: 10px;
+            width: 23px;
+            height: 18px;
+        }
+        .profile__edit_img {
+            max-height: 7.5px;
+            max-width: 7.5px;
+        }
+    }
