--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -6,7 +6,15 @@
     letter-spacing: 0em;
     text-align: left;
     color: #FFFFFF;
-    margin: 0;
+    margin: 10px 0 10px;
     padding: 0;
-    justify-content: baseline;
+}
+
+@media screen and (max-width: 700px) {
+    .profile__name {
+        margin-top: 23px;
+        font-size: 27px;
+        line-height: 33px;
+        text-align: center;
+    }
 }
