--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,3 +5,17 @@
     justify-content: space-between;
     align-items: center;
 }
+
+@media screen and (max-width: 900px) {
+    .profile {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .profile {
+        flex-direction: column;
+        margin-top: 42px;
+    }
+}
