verstka complete really

--- a/blocks/card/__emotion/card__emotion.css
+++ b/blocks/card/__emotion/card__emotion.css
@@ -4,3 +4,9 @@
     margin-top: 8px;
     margin-right: 5px;
 }
+
+@media screen and (max-width: 700px) {
+    .card__emotion {
+        margin-top: 6px;
+    }
+}
