--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -8,6 +8,10 @@
     color: #FFFFFF;
     margin: 10px 0 10px;
     padding: 0;
+    grid-area: name;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 700px) {
@@ -16,5 +20,6 @@
         font-size: 27px;
         line-height: 33px;
         text-align: center;
+        margin-right: 10px;
     }
 }
