--- a/blocks/profile/__spec/profile__spec.css
+++ b/blocks/profile/__spec/profile__spec.css
@@ -8,13 +8,17 @@
     color: #FFFFFF;
     margin: 0;
     padding: 0;
+    grid-area: spec;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 700px) {
     .profile__spec {
-        margin-top: 14px;
         text-align: center;
         font-size: 14px;
         line-height: 17px;
+        margin-right: 6px;
     }
 }
