--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -3,4 +3,6 @@
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     max-width: 1280px;
     min-width: 320px;
+    position: relative;
+    z-index: 2;
 }
