--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -9,6 +9,10 @@
     margin-top: 11px;
 }
 
+.profile__add:hover {
+    opacity: 0.6;
+}
+
 @media screen and (max-width: 700px) {
     .profile__add {
         width: 282px;
