--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -22,6 +22,10 @@
     left: 7px;
 }
 
+.profile__button:hover {
+    opacity: 0.6;
+}
+
 @media screen and (max-width: 700px) {
     .profile__button {
         width: 18px;
