--- a/pages/index.css
+++ b/pages/index.css
@@ -21,3 +21,10 @@
 @import url(../blocks/card/__emotion/card__emotion.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__bclose/popup__bclose.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__name/popup__name.css);
+@import url(../blocks/popup/__spec/popup__spec.css);
+@import url(../blocks/popup/__bsave/popup__bsave.css);
