--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,13 +7,13 @@
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     justify-content: center;
-    margin: 195px auto;
+    grid-area: form;
 }
 
 @media screen and (max-width: 700px) {
     .popup__container {
         width: 282px;
         height: 322px;
-        margin-top: 123px;
+        margin-top: 13px;
     }
 }
