--- a/blocks/popup/__bclose/popup__bclose.css
+++ b/blocks/popup/__bclose/popup__bclose.css
@@ -1,7 +1,13 @@
 .popup__bclose {
-    background-color: black;
+    background: none;
     border: none;
     grid-area: bclose;
+    background-image: url(../../../images/CloseIcon.svg);
+    background-position: center;
+    background-size: 100%;
+    height: 32px;
+    width: 32px;
+    padding: 0;
 }
 
 .popup__bclose:hover {
@@ -14,7 +20,7 @@
         justify-self: end;
         margin-left: 256px;
     }
-    .popup__bclose_img {
+    .popup__bclose-img {
         height: 20px;
         width: 20px;
     }
