--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,12 +1,21 @@
-.popup {}
+.popup {
+    display: none;
+}
 
 .popup_opened {
-    position: fixed;
     z-index: 1;
     width: 100%;
     height: 100%;
-    background: #000000;
-    opacity: 0.5;
+    ;
+}
+
+.popup_opened:before {
+    content: "";
+    display: block;
+    position: absolute;
     top: 0;
     left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
 }
