--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -1,4 +1,4 @@
-.card__title {
+.cards__title {
     font-size: 24px;
     font-style: normal;
     font-weight: 900;
@@ -13,7 +13,7 @@
 }
 
 @media screen and (max-width: 700px) {
-    .card__title {
+    .cards__title {
         width: 282px;
     }
 }
