--- a/blocks/cards/__emotion/cards__emotion.css
+++ b/blocks/cards/__emotion/cards__emotion.css
@@ -1,8 +1,13 @@
 .cards__emotion {
-    max-height: 19px;
-    max-width: 22px;
+    height: 19px;
+    width: 22px;
     margin-top: 8px;
     margin-right: 5px;
+    background-image: url(../../../images/like.svg);
+    background-color: white;
+    background-size: 100%;
+    border: none;
+    background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 700px) {
