--- a/blocks/popup/__bsave/popup__bsave.css
+++ b/blocks/popup/__bsave/popup__bsave.css
@@ -1,8 +1,8 @@
 .popup__bsave {
     background: #000000;
-    border-radius: 2px;
+    border: none;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     text-align: center;
@@ -23,10 +23,9 @@
         width: 238px;
         height: 46px;
         font-size: 14px;
-        font-weight: 400;
         line-height: 17px;
         letter-spacing: 0em;
-        margin-top: 42px;
+        margin-top: 44px;
         margin-bottom: 26px;
     }
 }
