--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,6 @@
 .popup__container {
     width: 430px;
-    height: 330px;
+    min-height: 330px;
     background-color: #FFFFFF;
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@
 @media screen and (max-width: 700px) {
     .popup__container {
         width: 282px;
-        height: 322px;
+        min-height: 322px;
         margin-top: 13px;
     }
 }
