--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
     border-radius: 2px;
     background-color: black;
-    width: 150px;
+    min-width: 150px;
     height: 50px;
     cursor: pointer;
     margin-top: 11px;
@@ -11,6 +11,7 @@
     background-image: url(../../../images/plusImg.svg);
     background-position: center;
     background-repeat: no-repeat;
+    padding: 0;
 }
 
 .profile__add:hover {
