--- a/blocks/cards/__emotion/cards__emotion.css
+++ b/blocks/cards/__emotion/cards__emotion.css
@@ -8,6 +8,7 @@
     background-size: 100%;
     border: none;
     background-repeat: no-repeat;
+    padding: 0;
 }
 
 @media screen and (max-width: 700px) {
@@ -19,8 +20,4 @@
 .cards__emotion:hover {
     opacity: 0.5;
     cursor: pointer;
-}
-
-.cards__emotion_active {
-    color: black;
 }
