--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,6 +6,8 @@
     letter-spacing: 0em;
     text-align: left;
     color: #545454;
+    margin: 0;
+    padding: 0;
 }
 
 @media screen and (max-width: 700px) {
