--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,6 +11,6 @@
 
 @media screen and (max-width: 600px) {
     .footer {
-        margin: 48px 36px 0 19px;
+        margin: 48px 0 36px 19px;
     }
 }
