--- a/pages/index.css
+++ b/pages/index.css
@@ -19,6 +19,7 @@
 @import url(../blocks/cards/__image/cards__image.css);
 @import url(../blocks/cards/__list/cards__list.css);
 @import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__emotion/_active/cards__emotion_active.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
