--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,5 +1,5 @@
 .cards__image {
-    min-width: 282px;
+    width: 282px;
     min-height: 282px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
