--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -9,3 +9,30 @@
         margin-top: 37px;
     }
 }
+
+.cards {
+    margin: 47px auto 0;
+    padding: 0;
+    display: grid;
+    grid-template-rows: repeat(2, max-content);
+    grid-template-columns: repeat(3, max-content);
+    grid-column-gap: 17px;
+    grid-row-gap: 20px;
+    justify-content: center;
+    list-style-type: none;
+}
+
+@media screen and (max-width: 890px) {
+    .cards {
+        grid-template-rows: repeat(auto-fill, max-content);
+        grid-template-columns: repeat(2, max-content);
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .cards {
+        grid-template-columns: repeat(1, max-content);
+        margin-top: 36px;
+    }
+}
