--- a/pages/index.css
+++ b/pages/index.css
@@ -30,3 +30,4 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/__bsave/popup__bsave.css);
+@import url(../blocks/cards/__trash/cards__trashicon.css);
