--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,7 +1,8 @@
 .popup_opened {
-    z-index: 3;
     width: 100%;
     height: 100%;
+    z-index: 3;
+    transition: visibility 0.6s, opacity 0.6s;
 }
 
 .popup_opened:before {
