--- a/pages/index.css
+++ b/pages/index.css
@@ -31,3 +31,7 @@
 @import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/__bsave/popup__bsave.css);
 @import url(../blocks/cards/__trash/cards__trashicon.css);
+@import url(../blocks/popup/__zoom/popup__zoom.css);
+@import url(../blocks/popup/__content/_zoom/popup__content_zoom.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__subtitle/popup__subtitle.css);
