--- a/blocks/popup/__content/_zoom/popup__content_zoom.css
+++ b/blocks/popup/__content/_zoom/popup__content_zoom.css
@@ -1,6 +1,6 @@
 .popup__content_zoom {
     display: grid;
-    grid-template-areas: ". . bclose" ". img ." ". subtitle .";
+    grid-template-areas: ". . bclose" ". img ." "subtitle . .";
     align-self: start;
     max-width: max-content;
     margin: 0 auto;
@@ -8,4 +8,10 @@
     left: 0;
     right: 0;
     gap: 10px;
+}
+
+@media screen and (max-width: 700px) {
+    .popup__content_zoom {
+        grid-template-areas: ". bclose" "img img" "subtitle .";
+    }
 }
