--- a/blocks/popup/__type/_opened/popup__type_opened.css
+++ b/blocks/popup/__type/_opened/popup__type_opened.css
@@ -1,11 +1,11 @@
-.popup_opened {
+.popup__type_opened {
     width: 100%;
     height: 100%;
     z-index: 3;
     transition: visibility 0.6s, opacity 0.6s;
 }
 
-.popup_opened:before {
+.popup__type_opened:before {
     content: "";
     display: block;
     position: fixed;
