--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-areas: ". bclose" "form .";
     max-width: 470px;
-    position: absolute;
+    position: fixed;
     top: 158px;
     left: calc(100%/2 - 430px/2);
     gap: 10px;
