--- a/blocks/popup/_type/_opened/popup_type_opened.css
+++ b/blocks/popup/_type/_opened/popup_type_opened.css
@@ -1,17 +1,4 @@
 .popup_type_opened {
-    width: 100%;
-    height: 100%;
-    z-index: 3;
-    transition: visibility 0.6s, opacity 0.6s;
-}
-
-.popup_type_opened:before {
-    content: "";
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    height: 100%;
+    visibility: visible;
+    opacity: 1;
 }
