--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,6 +1,7 @@
 .cards {
     max-width: 880px;
     max-height: max-content;
+    min-height: 25vh;
     margin: 54px auto 0;
     margin: 47px auto 0;
     padding: 0;
