--- a/blocks/popup/__content/_zoom/popup__content_zoom.css
+++ b/blocks/popup/__content/_zoom/popup__content_zoom.css
@@ -4,7 +4,7 @@
     align-self: start;
     max-width: max-content;
     margin: 0 auto;
-    top: 0;
+    top: 100px;
     left: 0;
     right: 0;
     gap: 10px;
