--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__bsave {
+.popup__button {
     background: #000000;
     border: none;
     border-radius: 2px;
@@ -10,17 +10,17 @@
     color: #FFFFFF;
     width: 358px;
     height: 50px;
-    margin: 48px auto 37px;
+    margin: 35px auto 37px;
     padding: 0;
 }
 
-.popup__bsave:hover {
+.popup__button:hover {
     opacity: 0.8;
     cursor: pointer;
 }
 
 @media screen and (max-width: 700px) {
-    .popup__bsave {
+    .popup__button {
         width: 238px;
         height: 46px;
         font-size: 14px;
