--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,4 +1,4 @@
-.popup__container {
+.popup__form {
     width: 430px;
     min-height: 330px;
     background-color: #FFFFFF;
@@ -10,7 +10,7 @@
 }
 
 @media screen and (max-width: 700px) {
-    .popup__container {
+    .popup__form {
         width: 282px;
         min-height: 322px;
         margin-top: 13px;
