--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup__text {
+.popup__input {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -9,16 +9,19 @@
     letter-spacing: 0em;
     text-align: left;
     padding: 7px 0;
-    margin: 0 auto 33px;
+    margin: 0 auto;
 }
 
-.popup__text:last-of-type {
+.popup__input::placeholder {
+    color: rgba(196, 196, 196, 1);
+}
+
+.popup__input:last-of-type {
     margin-bottom: 0;
 }
 
 @media screen and (max-width: 700px) {
-    .popup__text {
+    .popup__input {
         width: 238px;
     }
-    .popup__text:last-of-type {}
 }
