--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -10,6 +10,8 @@
     text-align: left;
     padding: 7px 0;
     margin: 0 auto;
+    outline: 0;
+    outline-offset: 0;
 }
 
 .popup__input::placeholder {
@@ -17,6 +19,7 @@
 }
 
 .popup__input:last-of-type {
+    margin-top: 30px;
     margin-bottom: 0;
 }
 
