--- a/blocks/popup/__input/_error/popup__input_error.css
+++ b/blocks/popup/__input/_error/popup__input_error.css
@@ -1,4 +1,4 @@
-.popup__input_type_error {
+.popup__input_error {
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 700px) {
-    .popup__input_type_error {
+    .popup__input_error {
         margin: 0 21px 0;
     }
 }
