--- a/blocks/popup/__input/_error/popup__input_error.css
+++ b/blocks/popup/__input/_error/popup__input_error.css
@@ -6,8 +6,9 @@
     color: #FF0000;
     border: none;
     padding-top: 5px;
-    margin: 0 36px 0;
+    margin: 0 36px 5px;
     max-width: 358px;
+    min-height: 12px;
 }
 
 @media screen and (max-width: 700px) {
