--- a/blocks/popup/__button/_disabled/popup__button_disabled.css
+++ b/blocks/popup/__button/_disabled/popup__button_disabled.css
@@ -1,4 +1,4 @@
-.popup__button_disable {
+.popup__button_disabled {
     background-color: rgba(255, 255, 255, 1);
     color: rgba(196, 196, 196, 1);
     border: 1px solid rgba(196, 196, 196, 1);
