--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -14,6 +14,11 @@
     outline-offset: 0;
 }
 
+.popup__input-span {
+    min-height: 12px;
+    margin-bottom: 13px;
+}
+
 .popup__input::placeholder {
     color: rgba(196, 196, 196, 1);
 }
