--- a/blocks/cards/__conteiner/cards__conteiner.css
+++ b/blocks/cards/__conteiner/cards__conteiner.css
@@ -4,4 +4,7 @@
     margin: 0;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
