--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,8 +1,12 @@
 .cards__image {
     width: 282px;
     min-height: 282px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
     object-fit: fill;
     cursor: pointer;
+    overflow: hidden;
+}
+
+.cards__image:hover {
+    transform: scale(1.02);
+    transition: visibility 0.6s, opacity 0.6s;
 }
