--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -14,6 +14,10 @@
     outline-offset: 0;
 }
 
+.popup__input:first-of-type {
+    margin-top: 32px;
+}
+
 .popup__input::placeholder {
     color: rgba(196, 196, 196, 1);
 }
