--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -3,7 +3,8 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
-    margin: 34px auto 46px;
+    padding: 0;
+    margin: 34px auto 14px;
     padding: 0;
     max-width: 358px;
     width: 100%;
