--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,5 @@
 .profile__avatar {
-    width: 120px;
-    max-height: 120px;
-    border-radius: 90px;
+    display: flex;
+    background-color: black;
+    cursor: pointer;
 }
