--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -12,6 +12,8 @@
 @import url(../blocks/profile/__spec/profile__spec.css);
 @import url(../blocks/profile/__button/profile__button.css);
 @import url(../blocks/profile/__add/profile__add.css);
+@import url(../blocks/profile/__image/profile__image.css);
+@import url(../blocks/profile/__avatar/_button/profile__button_avatar.css);
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__conteiner/cards__conteiner.css);
 @import url(../blocks/cards/__description/cards__description.css);
@@ -19,7 +21,9 @@
 @import url(../blocks/cards/__image/cards__image.css);
 @import url(../blocks/cards/__list/cards__list.css);
 @import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__reaction/cards__reaction.css);
 @import url(../blocks/cards/__emotion/_active/cards__emotion_active.css);
+@import url(../blocks/cards/__counter/cards__counter.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
