--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -17,6 +17,6 @@
         letter-spacing: 0em;
         text-align: left;
         max-width: 238px;
-        margin: 26px auto 75px;
+        margin: 26px auto;
     }
 }
