--- a/src/blocks/profile/__avatar/_button/profile__button_avatar.css
+++ b/src/blocks/profile/__avatar/_button/profile__button_avatar.css
@@ -5,6 +5,6 @@
     width: 26px;
     margin: 50px 50px;
     background-color: transparent;
-    border: hidden;
+    border: none;
     z-index: 1;
 }
